--- a/PVI/lab1/project/chess.html
+++ b/PVI/lab1/project/chess.html
@@ -32,7 +32,7 @@
         <div>
             <table>
                 <tr>
-                    <td><div class = "cell"><span class = "number">8</span></div></td>
+                    <td><div class = "cell"><span class = "number green">8</span></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
@@ -42,7 +42,7 @@
                     <td><div class = "cell"></div></td>
                 </tr>
                 <tr>
-                    <td><div class = "cell"><span class = "number">7</span></div></td>
+                    <td><div class = "cell"><span class = "number white">7</span></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
@@ -52,7 +52,7 @@
                     <td><div class = "cell"></div></td>
                 </tr>
                 <tr>
-                    <td><div class = "cell"><span class = "number">6</span></div></td>
+                    <td><div class = "cell"><span class = "number green">6</span></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
@@ -62,7 +62,7 @@
                     <td><div class = "cell"></div></td>
                 </tr>
                 <tr>
-                    <td><div class = "cell"><span class = "number">5</span></div></td>
+                    <td><div class = "cell"><span class = "number white">5</span></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
@@ -72,7 +72,7 @@
                     <td><div class = "cell"><img class="figure black pawn" src="Resources/bp.png" alt="black pawn" onclick="TagCell(event)"></div></td>
                 </tr>
                 <tr>
-                    <td><div class = "cell"><span class = "number">4</span></div></td>
+                    <td><div class = "cell"><span class = "number green">4</span></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
@@ -82,7 +82,7 @@
                     <td><div class = "cell"></div></td>
                 </tr>
                 <tr>
-                    <td><div class = "cell"><span class = "number">3</span></div></td>
+                    <td><div class = "cell"><span class = "number white">3</span></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
@@ -92,7 +92,7 @@
                     <td><div class = "cell"><img class="figure black king" src="Resources/bk.png" alt="black king" onclick="TagCell(event)"></div></td>
                 </tr>
                 <tr>
-                    <td><div class = "cell"><span class = "number">2</span></div></td>
+                    <td><div class = "cell"><span class = "number green">2</span></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
                     <td><div class = "cell"></div></td>
@@ -102,14 +102,14 @@
                     <td><div class = "cell"></div></td>
                 </tr>
                 <tr>
-                    <td><div class = "cell"><span class = "number">1</span><span class = "letter">a</span></div></td>
-                    <td><div class = "cell"><span class = "letter">b</span></div></td>
-                    <td><div class = "cell"><span class = "letter">c</span></div></td>
-                    <td><div class = "cell"><span class = "letter">d</span></div></td>
-                    <td><div class = "cell"><span class = "letter">e</span></div></td>
-                    <td><div class = "cell"><span class = "letter">f</span></div></td>
-                    <td><div class = "cell"><span class = "letter">g</span></div></td>
-                    <td><div class = "cell"><span class = "letter">h</span></div></td>
+                    <td><div class = "cell"><span class = "number white">1</span><span class = "letter white">a</span></div></td>
+                    <td><div class = "cell"><span class = "letter green">b</span></div></td>
+                    <td><div class = "cell"><span class = "letter white">c</span></div></td>
+                    <td><div class = "cell"><span class = "letter green">d</span></div></td>
+                    <td><div class = "cell"><span class = "letter white">e</span></div></td>
+                    <td><div class = "cell"><span class = "letter green">f</span></div></td>
+                    <td><div class = "cell"><span class = "letter white">g</span></div></td>
+                    <td><div class = "cell"><span class = "letter green">h</span></div></td>
                 </tr>
             </table>
         </div>
